# stock-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INTEGRATION_GUIDE.md  RAGAS_EVAL.md  README.md  ask.py  config.yaml  current_run.json  dashboard.py  finalize_run.py  pipeline_dashboard.html  pipeline_server.py  pyproject.toml  report_2026-04-28.html  rerun_ranking.py  resume_from_ticker.py  run_agent.py  run_schedule.py  signal_verification_job.py  test_causal_agent.py  test_fundamentals_agent.py  test_geo_agent.py  test_market_agent.py  test_market_yfinance.py  test_news_agent.py  test_ranking_agent.py  test_screener_agent.py  test_sentiment_agent.py  watchdog.py
agents/: __init__.py  causal_reasoning.py  crew.py  fundamentals.py  geo.py  market.py  narrative_cycle.py  news.py  ranking.py  screener.py  sentiment.py  world_intelligence.py
db/: __init__.py  client.py  collections.py
mcp_servers/: intelligence_mcp.py  market_mcp.py  mongo_mcp.py
models/: __init__.py  report.py  signal.py  theme.py
skills/: causal_reasoning.md  fundamentals_analysis.md  geo_analysis.md  market_analysis.md  narrative_cycle.md  news_analysis.md  ranking.md  screener.md  sentiment.md  world_intelligence.md
tests/: test_causal.py  test_screener.py  test_tools.py
tools/: __init__.py  bedrock.py  crossover_tracker.py  delivery.py  edgar.py  fred.py  google_trends.py  news_api.py  output_validator.py  polygon.py  ragas_eval.py  skill_loader.py  substack.py  yfinance_client.py
